# nanotensorlab

./: .gitignore  LICENSE  MANIFESTO.md  README.md  pyproject.toml
configs/: sampling_2d_gaussian_affineflow.yaml
configs/data/: gaussian_2d.yaml
configs/experiments/: sampling_2d_gaussian_affineflow.yaml
configs/models/samplers/: affine_flow_2d.yaml
configs/training/: default.yaml
docs/data/: gaussian.md
docs/models/: affine_flow.md
nanotensorlab/data/: datasets.py
nanotensorlab/data/generators/: gaussian.py
nanotensorlab/models/: models.py
nanotensorlab/models/samplers/: affine_flow.py
nanotensorlab/training/: trainer.py
outputs/sampling_2d_gaussian_affineflow/: best.pt  experiment_config.pt  last.pt
scripts/: evaluate.py  train.py
